# codebax-mcp

./: .coveragerc  .pre-commit-config.yaml  Dockerfile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  sonar-project.properties
.github/: CODEOWNERS
.github/tag_and_release/: intent.yaml
.github/workflows/: ci.yaml  docker-ci.yml  docs-automerge.yml  docs-build-check.yaml  documentation.yaml  release-validate.yml  release.yml  rw_build_and_test.yaml  rw_run_all_test_and_record.yaml
codebax_mcp/: entry.py
codebax_mcp/core/: __init__.py
codebax_mcp/core/index/: __init__.py  lock_file_store.py  models.py  symbol_index.py
codebax_mcp/core/parser/: __init__.py  base.py  models.py  python_parser.py
codebax_mcp/core/refactor/: __init__.py  models.py
codebax_mcp/core/type_checker/: __init__.py  models.py  pyright_client.py
codebax_mcp/core/utils/: __init__.py  confidence.py  heuristics.py  path_utils.py
codebax_mcp/mcp_server/: app.py
codebax_mcp/mcp_server/models/: code_models.py  project_models.py  type_models.py
codebax_mcp/mcp_server/models/input/: __init__.py  code_input.py  project_input.py  test_input.py  type_input.py
codebax_mcp/mcp_server/models/output/: __init__.py  code_output.py  project_output.py  test_output.py  type_output.py
codebax_mcp/mcp_server/tools/: __init__.py  app.py
codebax_mcp/mcp_server/tools/endpoints/: __init__.py  code.py  project.py  test.py  type.py
codebax_mcp/models/domain/: __init__.py  change.py  diagnostic.py  location.py  symbol.py
codebax_mcp/web_server/: app.py
codebax_mcp/web_server/dependencies/: health.py
codebax_mcp/web_server/models/response/: __init__.py  health_check.py
codebax_mcp/web_server/routers/: health.py
codebax_mcp/web_server/services/: health.py
docs/: package.json  pnpm-lock.yaml
docs/contents/document/: sidebars.ts
examples/type_checking/: README.md
scripts/docker/: run-server.sh
src/web_server/dependencies/: __init__.py
src/web_server/models/response/: __init__.py  health_check.py
src/web_server/routers/: __init__.py
src/web_server/services/: __init__.py
test/integration_test/: test_code_navigation_workflow.py  test_indexing_workflow.py
test/integration_test/web_server/: test_health_endpoints.py
test/unit_test/: test_entry.py  test_settings.py
test/unit_test/integrate/: test_factory.py
test/unit_test/mcp/: test_factory.py
test/unit_test/mcp_server/: test_factory.py
test/unit_test/models/: test_models.py
test/unit_test/web_server/: test_factory.py
(+46 files in other folders)
