[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebax-mcp"
version = "0.0.0"
description = "🧑‍💻 Like an IDE runtime functions for LLM tools or AI agents."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "mcp",
    "mcp server",
    "software",
    "software development",
    "codebase",
    "code index",
    "development tools",
    "AI agents develop",
    "LLM tools develop",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # Web server
    "fastapi>=0.128.0",
    # Data type validation as data models
    "pydantic>=2.12.5",
    # Data type validation as data models for settings (e.g., dotenv file)
    "pydantic-settings>=2.12.0",
    # ASGI server
    "uvicorn>=0.40.0",
    # MCP core feature
    "mcp[cli]>=1.26.0",
    # HTTP API client feature
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/Chisanan232/codebax-mcp"
Repository = "https://github.com/Chisanan232/codebax-mcp"
Documentation = "https://chisanan232.github.io/codebax-mcp/"
Changelog = "https://chisanan232.github.io/codebax-mcp/docs/next/changelog"
"Project Management" = "https://app.clickup.com/9018752317/v/f/901812716691/90184991515"

[project.scripts]
codebax-mcp = "codebax_mcp.entry:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0,<8",
    "pytest-asyncio>=1.1.0",
    "coverage>=7.10.6",
    "pytest-rerunfailures>=16.0.1",
    "aiohttp>=3.12.15",
    "pytest-asyncio>=1.1.0",
]
pre-commit-ci = [
    "mypy>=1.17.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["codebax_mcp/"]
packages = ["codebax_mcp"]
artifacts = ["codebax_mcp/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["codebax_mcp/"]
packages = ["codebax_mcp"]
artifacts = ["codebax_mcp/py.typed"]
